--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -1,5 +1,12 @@
 {
   "about": "私について",
   "project": "プロジェクト",
-  "contact": "ご連絡"
+  "contact": "ご連絡",
+  "greet": "こんにちは！",
+  "name1": "ピェッピョー",
+  "name2": "マウン",
+  "name3": "　と申します",
+  "role": "ソフトエンジニア",
+  "closing": "ご一緒に働くのを楽しみにしています",
+  "cvDownload": "CVをダウンロード"
 }
