--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -1,5 +1,6 @@
 {
   "about": "私について",
+  "tech": "技術スタック",
   "project": "プロジェクト",
   "contact": "ご連絡",
   "greet": "こんにちは！",
@@ -8,5 +9,11 @@
   "name3": "　と申します",
   "role": "ソフトエンジニア",
   "closing": "ご一緒に働くのを楽しみにしています",
-  "cvDownload": "CVをダウンロード"
+  "cvDownload": "CVをダウンロード",
+  "aboutTitle": "自己紹介",
+  "aboutText1": "1年以上の経験を持つウェブ開発者です。",
+  "aboutText2": "Vue、Nuxt、Laravel を主に使って開発しています。",
+  "aboutText3": "コードだけでなく、アクセシビリティ、パフォーマンス、そして人々が 楽しく 使えるデジタル製品の創造にも力を入れています。",
+  "aboutText4": "常に学び、常に成長しています。",
+  "eduBg": "学歴"
 }
