--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -1,7 +1,7 @@
 {
   "about": "私について",
   "project": "プロジェクト",
-  "contact": "ご連絡",
+  "contact": "お問い合わせ",
   "greet": "こんにちは！",
   "name1": "ピェッピョー",
   "name2": "マウン",
@@ -27,5 +27,8 @@
   "kenjaCloudDescription": "教師、生徒、出席、成績、時間割、その他日本の学校の運営に必要な機能を管理するための学校管理システムです。",
   "poddyDescription": "ユーザーがポッドキャストを管理・公開し、テーマをカスタマイズできる、動的なフロントエンドとスムーズなバックエンドを備えた管理システムです。",
   "laPayyDescription": "ユーザーが毎月お気に入りのレストランに登録して、毎日の食事配達を受けられるテイクアウトサブスクリプションプラットフォームで、顧客管理を効率化します。",
-  "contactTitle": "ご連絡"
+  "contactTitle": "お問い合わせ",
+  "contactText1": "コラボやお仕事のご相談は",
+  "contactText2": "以下のSNSまたはメールからお問い合わせください。",
+  "contactText3": "志が同じで情熱を持つ方々と一緒にお仕事できるのを楽しみにしています。"
 }
